src/test/ui/rfc-2093-infer-outlives/projection.stderr
error: rustc_outlives
  --> $DIR/projection.rs:4:1
   |
LL | struct Foo<'a, T: Iterator> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: <T as Iterator>::Item: 'a

error: aborting due to previous error

